# Archduchess

./: .gitignore  README.md
cmake/: AddCatch2.cmake
src/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  bot.cpp  bot.hpp  evaluation.cpp  evaluation.hpp  generator.cpp  generator.hpp  log.hpp  main.cpp  misc.hpp  move.cpp  move.hpp  perft.hpp  position.cpp  position.hpp  search.cpp  search.hpp  transposition.hpp  types.hpp  uci.cpp  uci.hpp  utils.hpp  zobrist.hpp
src/engine/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  bot.cpp  bot.hpp  evaluation.cpp  evaluation.hpp  generator.cpp  generator.hpp  listeners.hpp  move.hpp  perft.hpp  position.cpp  position.hpp  search.cpp  search.hpp  time.cpp  time.hpp  transposition.cpp  transposition.hpp  types.hpp  uci.cpp  uci.hpp  utils.hpp  zobrist.cpp  zobrist.hpp
src/tests/: CMakeLists.txt  test.cpp
